--- a/ProductStore/ProdeAppServer.csproj
+++ b/ProductStore/ProdeAppServer.csproj
@@ -206,6 +206,7 @@
     <Content Include="Content\views\mejores.html" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Images\background.jpg" />
     <Content Include="Images\brasil_2014.jpg" />
     <Content Include="Images\brasil_2014_logo.png" />
     <Content Include="Images\button-default-disabled-loading.gif" />
