--- a/ProductStore/ProdeAppServer.csproj
+++ b/ProductStore/ProdeAppServer.csproj
@@ -125,6 +125,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AuthenticationController.cs" />
+    <Compile Include="Controllers\PositionsController.cs" />
     <Compile Include="Models\BracketsPrediction.cs" />
     <Compile Include="Controllers\BracketsPredictionsController.cs" />
     <Compile Include="Controllers\GroupsPredictionsController.cs" />
@@ -134,6 +135,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Position.cs" />
     <Compile Include="Models\GroupMatchPrediction.cs" />
     <Compile Include="Models\IProductRepository.cs" />
     <Compile Include="Models\Prediction.cs" />
