--- a/ProductStore/ProdeAppServer.csproj
+++ b/ProductStore/ProdeAppServer.csproj
@@ -125,6 +125,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AuthenticationController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\PositionsController.cs" />
     <Compile Include="Models\BracketsPrediction.cs" />
     <Compile Include="Controllers\BracketsPredictionsController.cs" />
@@ -287,6 +288,7 @@
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
     <Content Include="Scripts\TimeAgoModule.js" />
+    <Content Include="Scripts\ui-bootstrap-tpls-0.11.0.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
