--- a/ProductStore/ProdeAppServer.csproj
+++ b/ProductStore/ProdeAppServer.csproj
@@ -125,6 +125,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AuthenticationController.cs" />
+    <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\PositionsController.cs" />
     <Compile Include="Models\BracketsPrediction.cs" />
@@ -136,6 +137,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\LogEntry.cs" />
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\GroupMatchPrediction.cs" />
     <Compile Include="Models\IProductRepository.cs" />
